feat: Add support for reading aws credentils from the '~/.aws/credentials' file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://github.com/nicolasdao/sls-config-parser#readme",
   "scripts": {
     "lint": "eslint index.js src/ test/ --fix",
-    "push": "git push --follow-tags origin master",
+    "push": "git push --follow-tags origin master && npm publish",
     "rls": "standard-version --release-as",
     "start": "NODE_ENV=production node index.js",
     "test": "mocha --exit",
