--- a/test/data/serverless_01.yml
+++ b/test/data/serverless_01.yml
@@ -25,6 +25,7 @@ custom:
 
 provider:
   name: aws
+  funcPrefix: func-${env:FUNC_PREFIX}
   runtime: nodejs10.x
   region: ap-southeast-2
   profile: fairplay
