--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://github.com/nicolasdao/sls-config-parser#readme",
   "scripts": {
-    "lint": "eslint index.js src/ test/ --fix",
+    "lint": "eslint setenv.js src/ test/ --fix",
     "push": "git push --follow-tags origin master && npm publish",
     "rls": "standard-version --release-as",
     "start": "NODE_ENV=production node index.js",
